--- a/index_fixed.html
+++ b/index_fixed.html
@@ -1613,7 +1613,112 @@ body::after{
   color:#9a9a9a;
   font-size:12px;
 }
+/* === Memo extras to avoid empty space === */
+.memo-extras{
+  margin-top:10px;
+  padding-top:10px;
+  border-top:1px solid rgba(255,255,255,.08);
+  display:flex;
+  flex-direction:column;
+  gap:10px;
+}
+.memo-chip-row{
+  display:flex;
+  flex-wrap:wrap;
+  gap:8px;
+}
+.memo-chip{
+  appearance:none;
+  border:1px solid rgba(245,226,122,.22);
+  background: rgba(0,0,0,.18);
+  color: rgba(255,255,255,.88);
+  padding:7px 10px;
+  border-radius:999px;
+  font-weight:900;
+  font-size:12px;
+  cursor:pointer;
+  transition: transform .12s ease, border-color .12s ease, background .12s ease;
+}
+.memo-chip:hover{
+  transform: translateY(-1px);
+  border-color: rgba(245,226,122,.34);
+  background: rgba(0,0,0,.26);
+}
+.memo-extra-actions{
+  display:flex;
+  gap:10px;
+  flex-wrap:wrap;
+}
+.memo-history{
+  display:grid;
+  gap:8px;
+}
+.memo-history-title{
+  font-weight:900;
+  font-size:12px;
+  color: rgba(255,255,255,.78);
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  gap:10px;
+}
+.memo-history-item{
+  border:1px solid rgba(255,255,255,.10);
+  background: rgba(0,0,0,.16);
+  border-radius:14px;
+  padding:10px 12px;
+  cursor:pointer;
+  transition: transform .12s ease, border-color .12s ease, background .12s ease;
+}
+.memo-history-item:hover{
+  transform: translateY(-1px);
+  border-color: rgba(245,226,122,.22);
+  background: rgba(0,0,0,.22);
+}
+.memo-history-meta{
+  display:flex;
+  gap:10px;
+  align-items:center;
+  justify-content:space-between;
+  font-size:11px;
+  color: rgba(255,255,255,.55);
+  margin-bottom:6px;
+}
+.memo-history-text{
+  font-size:12px;
+  color: rgba(255,255,255,.82);
+  line-height:1.35;
+  display:-webkit-box;
+  -webkit-line-clamp:2;
+  -webkit-box-orient:vertical;
+  overflow:hidden;
+}
+
 </style>
+<script>
+
+
+</style>
+<script>
+/* === SAFE LOADER FAILSAFE (파서/런타임 에러 대비) === */
+(function(){
+  function hide(){
+    var l=document.getElementById("loader");
+    if(!l) return;
+    l.classList.add("hide");
+    setTimeout(function(){ try{ l.remove(); }catch(e){} }, 500);
+  }
+  // DOM만 준비돼도 닫기
+  document.addEventListener("DOMContentLoaded", function(){ setTimeout(hide, 350); });
+  // 네트워크가 막혀도 닫기
+  setTimeout(hide, 2800);
+  // 최종: load
+  window.addEventListener("load", hide);
+  // 스크립트 에러로 멈추는 케이스 대비
+  window.addEventListener("error", function(){ setTimeout(hide, 0); });
+})();
+</script>
+
 <script>
 /* ===== 카드 데이터 (card9 추가) ===== */
 const CARD_DATA = {
@@ -2017,6 +2122,29 @@ function appendUtm(urlStr) {
         <button class="insight-btn" id="quickMemoSave" type="button">저장</button>
         <button class="insight-btn secondary" id="quickMemoClear" type="button">비우기</button>
       </div>
+
+      <div class="memo-extras">
+              <div class="memo-chip-row" aria-label="메모 템플릿">
+                <button class="memo-chip" type="button" data-memo-insert="체크 포인트: ">체크</button>
+                <button class="memo-chip" type="button" data-memo-insert="라인 변동: ">라인</button>
+                <button class="memo-chip" type="button" data-memo-insert="문의/상담: ">문의</button>
+                <button class="memo-chip" type="button" data-memo-insert="리스크: ">리스크</button>
+              </div>
+      
+              <div class="memo-extra-actions">
+                <button class="insight-btn" id="memoAppendAnalysis" type="button">분석 요약 추가</button>
+                <button class="insight-btn secondary" id="memoCopy" type="button">메모 복사</button>
+              </div>
+      
+              <div class="memo-history">
+                <div class="memo-history-title">
+                  <span>최근 메모</span>
+                  <span style="font-size:11px;color:rgba(255,255,255,.5);">클릭하면 불러오기</span>
+                </div>
+                <div id="memoHistoryList"></div>
+              </div>
+            </div>
+
     </div>
   </div>
 </div>
@@ -4040,21 +4168,171 @@ function openFromUrl() {
 
     // quick memo (local only)
     const key = "88st_quickMemo_v1";
+    const keyHist = "88st_quickMemoHist_v1";
     const ta = document.getElementById("quickMemoText");
     const btnSave = document.getElementById("quickMemoSave");
     const btnClear = document.getElementById("quickMemoClear");
+
+    const btnAppend = document.getElementById("memoAppendAnalysis");
+    const btnCopy = document.getElementById("memoCopy");
+    const histList = document.getElementById("memoHistoryList");
+    const chips = document.querySelectorAll("[data-memo-insert]");
+
+    function safeJsonParse(v, fallback){
+      try{ return JSON.parse(v); }catch(e){ return fallback; }
+    }
+    function loadHist(){
+      const raw = localStorage.getItem(keyHist);
+      const arr = safeJsonParse(raw, []);
+      return Array.isArray(arr) ? arr : [];
+    }
+    function saveHist(arr){
+      try{ localStorage.setItem(keyHist, JSON.stringify(arr.slice(0,5))); }catch(e){}
+    }
+    function tsLabel(ms){
+      try{
+        const d = new Date(ms);
+        const mm = String(d.getMonth()+1).padStart(2,"0");
+        const dd = String(d.getDate()).padStart(2,"0");
+        const hh = String(d.getHours()).padStart(2,"0");
+        const mi = String(d.getMinutes()).padStart(2,"0");
+        return `${mm}.${dd} ${hh}:${mi}`;
+      }catch(e){ return ""; }
+    }
+    function renderHist(){
+      if(!histList) return;
+      const arr = loadHist();
+      if(!arr.length){
+        histList.innerHTML = '<div class="text" style="color:rgba(255,255,255,.55);font-size:12px;">저장된 메모가 없습니다.</div>';
+        return;
+      }
+      histList.innerHTML = arr.map((it, idx)=>{
+        const text = (it && it.text) ? String(it.text) : "";
+        const t = (it && it.t) ? Number(it.t) : 0;
+        return `
+          <div class="memo-history-item" data-memo-idx="${idx}">
+            <div class="memo-history-meta">
+              <span>${tsLabel(t)}</span>
+              <span style="color:rgba(245,226,122,.75);font-weight:900;">불러오기</span>
+            </div>
+            <div class="memo-history-text">${text.replace(/[<>&]/g, s => ({'<':'&lt;','>':'&gt;','&':'&amp;'}[s]))}</div>
+          </div>
+        `;
+      }).join("");
+    }
+    function addHist(text){
+      const t = Date.now();
+      const v = (text||"").trim();
+      if(!v) return;
+      const arr = loadHist();
+      // 동일 메모 중복 방지
+      if(arr.length && arr[0] && String(arr[0].text||"").trim() === v) return;
+      arr.unshift({t, text: v});
+      saveHist(arr);
+    }
+
+    function pillsText(id){
+      const el = document.getElementById(id);
+      if(!el) return [];
+      const pills = Array.from(el.querySelectorAll(".odds-pill"));
+      return pills.map(p => (p.textContent||"").trim()).filter(Boolean);
+    }
+    function buildAnalysisLine(){
+      const margin = (document.getElementById("oddsMarginValue")?.textContent||"").trim();
+      if(!margin || margin === "—") return "";
+      const fair = pillsText("oddsFairPills");
+      const prob = pillsText("oddsProbPills");
+      const fairTxt = fair.length ? fair.join(" / ") : "—";
+      const probTxt = prob.length ? prob.join(" / ") : "—";
+      return `[배당 구조 분석] 마진 ${margin} | 공정배당 ${fairTxt} | 정규확률 ${probTxt}`;
+    }
+
     if(ta){
       ta.value = localStorage.getItem(key) || "";
+      renderHist();
+
       btnSave && btnSave.addEventListener("click", ()=>{
-        localStorage.setItem(key, (ta.value||"").trim());
+        const v = (ta.value||"").trim();
+        localStorage.setItem(key, v);
+        addHist(v);
+        renderHist();
         miniToast("메모 저장 완료");
       });
+
       btnClear && btnClear.addEventListener("click", ()=>{
         ta.value = "";
         localStorage.removeItem(key);
         miniToast("메모 비움");
       });
+
+      // history click to load
+      histList && histList.addEventListener("click", (e)=>{
+        const item = e.target.closest(".memo-history-item");
+        if(!item) return;
+        const idx = Number(item.getAttribute("data-memo-idx"));
+        const arr = loadHist();
+        const it = arr[idx];
+        if(it && typeof it.text === "string"){
+          ta.value = it.text;
+          localStorage.setItem(key, it.text);
+          miniToast("메모 불러옴");
+        }
+      });
+
+      // template chips insert
+      chips && chips.forEach(btn=>{
+        btn.addEventListener("click", ()=>{
+          const ins = btn.getAttribute("data-memo-insert") || "";
+          const start = ta.selectionStart ?? ta.value.length;
+          const end = ta.selectionEnd ?? ta.value.length;
+          const before = ta.value.slice(0, start);
+          const after = ta.value.slice(end);
+          const glue = (before && !before.endsWith("\n")) ? "\n" : "";
+          ta.value = before + glue + ins + after;
+          const pos = (before + glue + ins).length;
+          ta.focus();
+          ta.setSelectionRange(pos, pos);
+        });
+      });
+
+      // append analysis summary
+      btnAppend && btnAppend.addEventListener("click", ()=>{
+        const line = buildAnalysisLine();
+        if(!line){
+          miniToast("먼저 '분석 실행'을 눌러주세요");
+          return;
+        }
+        const cur = (ta.value||"").trim();
+        ta.value = cur ? (cur + "\n" + line) : line;
+        localStorage.setItem(key, ta.value.trim());
+        addHist(ta.value.trim());
+        renderHist();
+        miniToast("분석 요약 추가");
+      });
+
+      // copy to clipboard
+      btnCopy && btnCopy.addEventListener("click", async ()=>{
+        const v = (ta.value||"").trim();
+        if(!v){ miniToast("복사할 메모가 없습니다"); return; }
+        try{
+          await navigator.clipboard.writeText(v);
+          miniToast("메모 복사됨");
+        }catch(e){
+          // fallback
+          try{
+            ta.focus();
+            ta.select();
+            document.execCommand("copy");
+            miniToast("메모 복사됨");
+          }catch(e2){
+            miniToast("복사 실패");
+          }finally{
+            ta.setSelectionRange(ta.value.length, ta.value.length);
+          }
+        }
+      });
     }
+
   }catch(e){}
 })();
 </script>
