--- a/index.html
+++ b/index.html
@@ -1955,6 +1955,8 @@ function appendUtm(urlStr) {
   ]
 }
 </script>
+
+<link rel="stylesheet" href="assets/mobile-polish.css?v=1">
 </head>
 <body>
 <div class="notice-bar">
