--- a/casino/landing-a_index.html
+++ b/casino/landing-a_index.html
@@ -131,6 +131,8 @@ a{ color:inherit; }
   ]
 }
 </script>
+
+<script src="/assets/js/88st-analytics.js"></script>
 </head>
 <body>
 <div class="wrap">
