--- a/index_fixed.html
+++ b/index_fixed.html
@@ -20,13 +20,7 @@
 <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
 <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
 <!-- ===== GA4 (원하면 ID만 교체) ===== -->
-<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-KWT87FBY6S"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){ dataLayer.push(arguments); }
-  gtag('js', new Date());
-  gtag('config', 'G-KWT87FBY6S', { anonymize_ip: true });
-</script>
+
 <style>
 *,
 *::before,
@@ -1797,121 +1791,8 @@ const INSIGHTS_BY_SPORT = {
   ]
 };
 
-/* ===== 유틸: GA 이벤트/UTM 저장/UTM 붙이기 ===== */
-const UTM_KEYS = ["utm_source","utm_medium","utm_campaign","utm_term","utm_content"];
-function track(evt, params) {
-  // GA4 event helper
-  try {
-    if (typeof window.gtag !== "function") return;
-
-    const p = Object.assign({}, (params || {}));
-
-    // DebugView toggle: add ?debug=1 or set localStorage "ga_debug" = "1"
-    const sp = new URLSearchParams(location.search);
-    const dbg = (sp.get("debug") === "1") || (localStorage.getItem("ga_debug") === "1");
-    if (dbg && p.debug_mode === undefined) p.debug_mode = true;
-
-    // Helpful common context (lightweight)
-    if (p.page_path === undefined) p.page_path = location.pathname;
-    if (p.page_title === undefined && document && document.title) p.page_title = document.title.slice(0, 80);
-
-    // Backward/forward compatible parameter normalization (keep original keys too)
-    if (evt === "cta_click") {
-      if (p.cta && p.cta_id === undefined) p.cta_id = p.cta;
-    }
-    if (evt === "outbound_click") {
-      if (p.type && p.outbound_type === undefined) p.outbound_type = p.type;
-      if (p.destination_domain === undefined && typeof p.url === "string") {
-        try { p.destination_domain = (new URL(p.url, location.href)).hostname; } catch(e) {}
-      }
-    }
-    if (evt === "card_open") {
-      if (p.title && p.card_title === undefined) p.card_title = p.title;
-      if (p.tag && p.card_tag === undefined) p.card_tag = p.tag;
-    }
-    if (evt === "search") {
-      if (p.search_term && p.query === undefined) p.query = p.search_term;
-    }
-
-    window.gtag("event", evt, p);
-  } catch (e) {}
-}
-function saveUtmFromUrl() {
-  const sp = new URLSearchParams(location.search);
-  let has=false;
-  const obj={};
-  UTM_KEYS.forEach(k=>{
-    const v = sp.get(k);
-    if(v){ obj[k]=v; has=true; }
-  });
-  if(has){
-    obj.__ts = Date.now();
-    localStorage.setItem("88_utm", JSON.stringify(obj));
-  }
-}
-function getUtmQuery() {
-  try {
-    const raw = localStorage.getItem("88_utm");
-    if(!raw) return "";
-    const obj = JSON.parse(raw);
-    if(!obj || !obj.__ts) return "";
-    // 14일 유지
-    const TTL = 14*24*60*60*1000;
-    if(Date.now() - obj.__ts > TTL) return "";
-    const sp = new URLSearchParams();
-    UTM_KEYS.forEach(k=>{ if(obj[k]) sp.set(k, obj[k]); });
-    const qs = sp.toString();
-    return qs ? ("?"+qs) : "";
-  } catch(e) { return ""; }
-}
-function appendUtm(urlStr) {
-  try {
-    const u = new URL(urlStr, location.href);
-    const existing = new URLSearchParams(u.search);
-    const stored = new URLSearchParams(getUtmQuery().replace(/^\?/,""));
-    UTM_KEYS.forEach(k=>{
-      if(!existing.get(k) && stored.get(k)) existing.set(k, stored.get(k));
-    });
-    u.search = existing.toString();
-    return u.toString();
-  } catch(e) {
-    return urlStr;
-  }
-}
 </script>
-<script>
-  // ===== Site Config (EDIT THESE) =====
-  // GA4_ID: GA4 Measurement ID (예: G-XXXXXXXXXX)
-  // POPULAR_API: 전체 사용자 인기 데이터를 반환하는 API 엔드포인트(예: /api/popular)
-  //   - 연동 전에는 비워두면(또는 "disabled") 로컬 집계(내 브라우저 기준)로만 표시됩니다.
-  window.SITE_CONFIG = window.SITE_CONFIG || {
-    GA4_ID: "G-KWT87FBY6S",
-    POPULAR_API: "disabled"
-  };
 
-  // ===== GA4 bootstrap (dynamic inject) =====
-  (function initGA4(){
-    try{
-      const id = (window.SITE_CONFIG && window.SITE_CONFIG.GA4_ID) || "";
-      if(!id || id === "disabled" || /^G-XXXX/i.test(id) || id === "G-XXXXXXXXXX") return;
-
-      // 이미 gtag 로드되어 있으면 중복 로드 방지
-      if(document.querySelector('script[src*="gtag/js?id=' + encodeURIComponent(id) + '"]')) return;
-      
-
-      const s = document.createElement("script");
-      s.async = true;
-      s.src = "https://www.googletagmanager.com/gtag/js?id=" + encodeURIComponent(id);
-      document.head.appendChild(s);
-
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){ dataLayer.push(arguments); }
-      window.gtag = window.gtag || gtag;
-      gtag("js", new Date());
-      gtag("config", id, { send_page_view: true });
-    }catch(e){}
-  })();
-</script>
 
 <script type="application/ld+json">
 {
@@ -1954,6 +1835,8 @@ function appendUtm(urlStr) {
 </script>
 
 <link rel="stylesheet" href="assets/mobile-polish.css?v=2">
+
+<script src="/assets/js/88st-analytics.js"></script>
 </head>
 <body>
 <div class="notice-bar">
@@ -2360,8 +2243,8 @@ function appendUtm(urlStr) {
 <p id="pBenefit" style="color:#f5e27a;font-size:13px;margin:10px 0 0;"></p>
 <p id="pNotice" style="color:#ff6b6b;font-size:12px;margin:8px 0 0;"></p>
 <div aria-label="주요 액션" class="popup-cta">
-<a class="btn go primary" id="pLink" rel="noopener" target="_blank">사이트 이동</a>
-<a class="btn copy secondary" id="pTelegram" rel="noopener" target="_blank">텔레그램 상담</a>
+<a class="btn go primary" id="pLink" rel="noopener" target="_blank" data-no-auto-outbound="1">사이트 이동</a>
+<a class="btn copy secondary" id="pTelegram" rel="noopener" target="_blank" data-no-auto-outbound="1">텔레그램 상담</a>
 <div class="btn copy tertiary" id="copyBtn" role="button" tabindex="0">가입코드 복사</div>
 </div>
 <div aria-label="보조 액션" class="popup-aux">
@@ -4084,24 +3967,6 @@ function maybeAutoRecFilter() {
     }
   }
 }
-
-/* ===== CTA 트래킹 ===== */
-(function bindCtas() {
-  document.querySelectorAll("[data-cta]").forEach(el=>{
-    el.addEventListener("click", ()=>{
-      const cta = el.getAttribute("data-cta") || "";
-      const txt = (el.textContent || "").replace(/\s+/g," ").trim().slice(0,60);
-      let loc = "unknown";
-      if(el.closest(".fab")) loc = "fab";
-      else if(el.closest("#analyzerSection")) loc = "hero";
-      else if(el.closest(".vendor-header")) loc = "vendor_header";
-      else if(el.closest(".vendor-tools")) loc = "vendor_tools";
-      else if(el.closest(".landing-seo")) loc = "footer_links";
-      track("cta_click", {"cta": cta, "cta_location": loc, "cta_text": txt});
-    });
-  });
-})();
-
 
 function openFromUrl() {
   try {
