--- a/tool-margin/index.html
+++ b/tool-margin/index.html
@@ -216,6 +216,8 @@ a{ color:inherit; }
   ]
 }
 </script>
+
+<script src="/assets/js/88st-analytics.js"></script>
 </head>
 <body>
   <div class="wrap">
